# mastercard

./: .gitignore  Home.py  TODO.md  X_train.joblib  model.joblib  pyproject.toml  readme.md  requirements.txt  setup.py  y_train.joblib
experiments/: main.py
experiments/configs/: config_iris.py  config_mastercard_basic.py  config_mastercard_lgbm.py  config_mastercard_logistic.py  config_mastercard_random.py
functions/: boxes.py  features.py  models.py  plots.py
mastercard/: experiment_template.py
mastercard/experiment_session/: data_spliter.py
mastercard/models/mc_lgbm/: __init__.py  artifacts.py  evaluate.py  hyperparameters.py  predict.py  train.py
mastercard/models/mc_lgbm_basic/: __init__.py  artifacts.py  evaluate.py  hyperparameters.py  predict.py  src.py  train.py
mastercard/models/mc_logistic/: __init__.py  artifacts.py  hyperparameters.py  predict.py  train.py
mastercard/models/mc_random/: __init__.py  artifacts.py  hyperparameters.py  predict.py  train.py
mastercard/models/model_0/: __init__.py  artifacts.py  evaluate.py  hyperparameters.py  predict.py  train.py
notebooks/: boxes.py  data_comparison.ipynb  data_exploration.ipynb  exploration_time_features.ipynb  isolation_frest.ipynb  logistic.ipynb  model.joblib  models.py  plots.py
notebooks/prev/: logistic.ipynb
pages/: 1_📊_Eksploracja_danych.py  2_📈_Predykcje_prawdopodobienstwa.py
