[project]
name='mastercard'
version="0.0.1"
dependencies = [
    "folium>=0.19.6",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.29.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "skrub>=0.5.3",
]

[tool.ruff]
line-length = 150

[tool.uv.sources]
mastercard = { workspace = true }

[dependency-groups]
dev = [
    "mastercard",
]
